src/types/tests/snapshots/tgbot__types__tests__message__photo.snap
---
source: src/types/tests/message.rs
expression: expected_struct.clone()
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "photo": [
    {
      "file_id": "photo-id",
      "file_unique_id": "unique-id",
      "height": 300,
      "width": 200
    }
  ]
}
