src/types/tests/snapshots/tgbot__types__tests__message__poll.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "poll": {
    "type": "regular",
    "allows_multiple_answers": false,
    "allows_revoting": false,
    "id": "poll-id",
    "is_anonymous": true,
    "is_closed": true,
    "members_only": false,
    "options": [
      {
        "persistent_id": "1",
        "text": "Yes",
        "voter_count": 1000
      },
      {
        "persistent_id": "2",
        "text": "No",
        "voter_count": 0
      }
    ],
    "question": "Rust?",
    "total_voter_count": 100
  }
}
