src/types/tests/snapshots/tgbot__types__tests__message__private_chat.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "private",
    "id": 1,
    "first_name": "Target"
  },
  "date": 0,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "Target",
    "id": 1,
    "is_bot": false
  }
}
